--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 body {
-    margin: 75px 50px;
+    margin: 75px auto;
     background-color: #1F2937;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #title1{
@@ -72,6 +76,7 @@ button{
     background-color: #273549;
     color: #55F991
 }
+
 
 
 
